--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -9,60 +9,60 @@
   "STRING_YES": "JA",
   "STRING_NO": "NEIN",
   "STRING_ALBUM": "Alben",
-  "STRING_TRACK": "Songs",
-  "STRING_TOP_TRACKS": "TOP TRACKS",
+  "STRING_TRACK": "Titel",
+  "STRING_TOP_TRACKS": "Top Titel",
   "STRING_ARTIST": "Künstler",
   "STRING_SAVED": "gespeichert",
-  "STRING_THEME_MODE_LIGHT": "Light",
-  "STRING_THEME_MODE_DARK": "Dark",
+  "STRING_THEME_MODE_LIGHT": "Hell",
+  "STRING_THEME_MODE_DARK": "Dunkel",
   "STRING_OPTIONS": "Optionen",
-  "STRING_FOLLOWERS": "followers",
+  "STRING_FOLLOWERS": "Followers",
   "STRING_PLAYS": "plays",
-  "STRING_EXPORT_TRACK": "Song exportieren",
-  "STRING_DELETE_TRACK": "Song löschen",
+  "STRING_EXPORT_TRACK": "Titel exportieren",
+  "STRING_DELETE_TRACK": "Titel löschen",
   "STRING_SEARCH_MODE_SUBTITLE_ALBUM": "Musik aus Ihren Lieblingsalben suchen",
-  "STRING_SEARCH_MODE_SUBTITLE_TRACK": "Suche nach Ihren Lieblings-Songs",
+  "STRING_SEARCH_MODE_SUBTITLE_TRACK": "Suche nach Ihren Lieblings-Titel",
   "STRING_SEARCH_MODE_SUBTITLE_ARTIST": "Musik von Ihren Lieblings-Künstlern suchen",
   "STRING_SEARCH_HISTORY_SUBHEADER": "Ihre letzten Suchen",
   "STRING_SEARCH_RESULT_LOADER_LABEL": "Musik laden...",
   "STRING_SEARCH_RESULT_TOP_SUBHEADER_ALBUM": "Hier ist das Album, das Ihrer Suche am nächsten kommt",
-  "STRING_SEARCH_RESULT_TOP_SUBHEADER_TRACK": "Hier ist der nächstgelegene Songzu Ihrer Suche",
+  "STRING_SEARCH_RESULT_TOP_SUBHEADER_TRACK": "Hier ist ein Titel, der Ihrer Suche am nächsten kommt",
   "STRING_SEARCH_RESULT_TOP_SUBHEADER_ARTIST": "Hier ist der Künstler zu Ihrer Suche",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_ALBUM": "ALBUM HERUNTERLADEN",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_TRACK": "SONG HERUNTERLADEN",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_ARTIST": "KÜNSTLER HERUNTERLADEN",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_ALBUM": "ALBUM ANZEIGEN",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_TRACK": "SONG ANZEIGEN",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_ARTIST": "KÜNSTLER ANZEIGEN",
+  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_ALBUM": "ALBUM herunterladen",
+  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_TRACK": "TITEL herunterladen",
+  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_ARTIST": "KÜNSTLER herunterladen",
+  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_ALBUM": "ALBUM anzeigen",
+  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_TRACK": "TITEL anzeigen",
+  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_ARTIST": "KÜNSTLER anzeigen",
   "STRING_SEARCH_RESULT_OTHER_SUBHEADER_ALBUM": "Mehr Alben zum Ergebnis",
-  "STRING_SEARCH_RESULT_OTHER_SUBHEADER_TRACK": "Mehr Songs zum Ergebnis",
+  "STRING_SEARCH_RESULT_OTHER_SUBHEADER_TRACK": "Mehr Titel zum Ergebnis",
   "STRING_SEARCH_RESULT_OTHER_SUBHEADER_ARTIST": "Ähnliche Künstler",
   "STRING_ALBUM_VIEW_DOWNLOAD_BACK_TITLE": "Sie können nicht zurückgehen",
-  "STRING_ALBUM_VIEW_DOWNLOAD_BACK_SUBTITLE": "Einer oder mehrere Songs werden offline gespeichert. Bitte warten Sie, bis alle Songs gespeichert wurden.",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_TITLE": "Der Song konnte nicht gespeichert werden",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_SUBTITLE": "Wir empfehlen Ihnen dringend, Ihre Internetverbindung zu überprüfen und es in einer Weile erneut zu versuchen",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_TITLE": "Wir haben alle schlechte Tage",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_SUBTITLE": "We have encountered an error while saving this track. This generally means that you need to check & update your server. This error has nothing to do with this application.",
+  "STRING_ALBUM_VIEW_DOWNLOAD_BACK_SUBTITLE": "Einer oder mehrere Titel werden offline gespeichert. Bitte warten Sie, bis alle Titel gespeichert wurden.",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_TITLE": "Der Titel konnte nicht gespeichert werden",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_SUBTITLE": "Wir empfehlen Ihnen dringend, Ihre Internetverbindung zu überprüfen oder es in einer Weile erneut zu versuchen",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_TITLE": "Wir haben alle schlechte Tage :-(",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_SUBTITLE": "Beim Speichern dieses Titels ist ein Fehler aufgetreten. Dies bedeutet im Allgemeinen, dass Sie Ihr System überprüfen und/oder aktualisieren müssen. Dieser Fehler hat mit der Anwendung nichts zu tun.",
   "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_TITLE": "Warten",
-  "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_SUBTITLE": "Dieser Song wird bereits heruntergeladen",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_TITLE": "Dieser Song wurde bereits heruntergeladen.",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_SUBTITLE": "Möchten Sie diesen Song erneut herunterladen?",
-  "STRING_ALBUM_VIEW_LOADER_LABEL": "Songs laden...",
-  "STRING_ALBUM_VIEW_TRACKS_SUBHEADER": "Hier sind die Songs aus diesem Album",
+  "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_SUBTITLE": "Dieser Titel wird bereits heruntergeladen.",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_TITLE": "Dieser Titel wurde bereits heruntergeladen.",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_SUBTITLE": "Möchten Sie diesen Titel erneut herunterladen?",
+  "STRING_ALBUM_VIEW_LOADER_LABEL": "Titel laden...",
+  "STRING_ALBUM_VIEW_TRACKS_SUBHEADER": "Hier sind die Titel aus diesem Album",
   "STRING_ALBUM_VIEW_INFO_SUBHEADER": "Einige Einblicke in das Album",
-  "STRING_LOCAL_TOP_BODY_ALBUM_EMPTY": "Suche & speichere etwas Musik, um sie hier zu sehen.\nDrehe den Aktualisierungsbutton, um neue Sachen zu sehen",
-  "STRING_LOCAL_TOP_SUBHEADER_ALBUM": "Hier ist das letzte von Ihnen gespeicherte Album",
-  "STRING_LOCAL_OTHER_SUBHEADER_ALBUM": "Hier sind Ihre anderen Alben",
-  "STRING_LOCAL_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
-  "STRING_LOCAL_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
-  "STRING_LOCAL_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
-  "STRING_LOCAL_OTHER_SUBHEADER_ARTIST": "Here are the artists saved on your device.",
-  "STRING_LOCAL_ALBUM_VIEW_TRACKS_SUBHEADER": "Hier sind die Songs, die Sie gespeichert haben",
+  "STRING_LOCAL_TOP_BODY_ALBUM_EMPTY": "Suche & speichere etwas Musik, um sie hier zu sehen.\nKlicke auf den Aktualisierungsbutton, um neue Sachen zu laden.",
+  "STRING_LOCAL_TOP_SUBHEADER_ALBUM": "Hier ist das letzte von Ihnen gespeicherte Album.",
+  "STRING_LOCAL_OTHER_SUBHEADER_ALBUM": "Hier sind Ihre anderen Alben.",
+  "STRING_LOCAL_TOP_SUBHEADER_TRACK": "Hier ist der letzte von Ihnen gespeicherte Titel.",
+  "STRING_LOCAL_OTHER_SUBHEADER_TRACK": "Hier sind ihre anderen Titel.",
+  "STRING_LOCAL_TOP_SUBHEADER_ARTIST": "Hier ist der neueste von Ihnen gespeicherte Künstler.",
+  "STRING_LOCAL_OTHER_SUBHEADER_ARTIST": "Hier sind die auf Ihrem Gerät gespeicherten Künstler.",
+  "STRING_LOCAL_ALBUM_VIEW_TRACKS_SUBHEADER": "Hier sind die Titel, die Sie gespeichert haben",
   "STRING_LOCAL_ALBUM_VIEW_INFO_SUBHEADER": "Einige Einblicke in das Album",
-  "STRING_LOCAL_ALBUM_VIEW_ALBUM_DELETE_DIALOG_HEADER": "Dieses Album löschen ?",
+  "STRING_LOCAL_ALBUM_VIEW_ALBUM_DELETE_DIALOG_HEADER": "Dieses Album löschen?",
   "STRING_LOCAL_ALBUM_VIEW_ALBUM_DELETE_DIALOG_BODY": "Löschen - Sicher...?",
-  "STRING_LOCAL_ALBUM_VIEW_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
-  "STRING_LOCAL_ALBUM_VIEW_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
+  "STRING_LOCAL_ALBUM_VIEW_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Titel löschen?",
+  "STRING_LOCAL_ALBUM_VIEW_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Titel entfernen?",
   "STRING_NOW_PLAYING_NEXT_TRACK": "NÄCHSTER",
   "STRING_NOW_PLAYING_PREVIOUS_TRACK": "VORHERIGER",
   "STRING_NOW_PLAYING_NOT_PLAYING_TITLE": "Es wird aktuell nichts gespielt...",
@@ -74,109 +74,109 @@
   "STRING_SETTING_STARGAZERS_SUBTITLE": "Vielen Dank für Ihre Unterstützung",
   "STRING_SETTING_LANGUAGE_TITLE": "Sprachen",
   "STRING_SETTING_LANGUAGE_SUBTITLE": "Ändern Sie die Spracheinstellungen der App.",
-  "STRING_SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "App restart required",
-  "STRING_SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Do you want to restart the app now?",
+  "STRING_SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "App-Neustart notwendig!",
+  "STRING_SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Möchten Sie die App jetzt neustarten?",
   "STRING_ABOUT_TITLE": "Über",
-  "STRING_ABOUT_SUBTITLE": "Informationen über die App und deren Entwickler",
+  "STRING_ABOUT_SUBTITLE": "Informationen über die App und dessen Entwickler",
   "STRING_SETTING_SERVER_CHANGE_TITLE": "Server",
-  "STRING_SETTING_SERVER_CHANGE_SUBTITLE": "Nur ändern, um Songs von einen anderen Server zu erhalten.",
+  "STRING_SETTING_SERVER_CHANGE_SUBTITLE": "Nur ändern, um Titel von einen anderen Server zu laden.",
   "STRING_SETTING_SERVER_CHANGE_SERVER_HINT": "Bitte geben Sie eine Server-URL ein",
   "STRING_SETTING_SERVER_CHANGE_SERVER_LABEL": "Server-URL",
   "STRING_SETTING_SERVER_CHANGE_ERROR_INVALID": "Dies ist keine gültige Server-URL.",
-  "STRING_SETTING_SERVER_CHANGE_ERROR_NETWORK": "Bitte überprüfen Sie Ihre Internetverbindung.",
+  "STRING_SETTING_SERVER_CHANGE_ERROR_NETWORK": "Bitte überprüfen Sie Ihre Internetverbindung!",
   "STRING_SETTING_SERVER_CHANGE_DONE": "Server erfolgreich geändert.",
-  "STRING_SETTING_SERVER_CHANGE_CHANGING": "Server für die App gewechselt...",
+  "STRING_SETTING_SERVER_CHANGE_CHANGING": "Server für die App geändert...",
   "STRING_SETTING_LANGUAGE_PROVIDERS_TITLE": "Übersetzer",
   "STRING_SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Vielen Dank für die Unterstützung!",
   "STRING_SETTING_ACCENT_COLOR_TITLE": "Akzentfarbe",
   "STRING_SETTING_ACCENT_COLOR_SUBTITLE": "Ändern der Akzentfarbe der App",
   "STRING_SETTING_THEME_TITLE": "Theme",
-  "STRING_SETTING_THEME_SUBTITLE": "Ändern Sie die App im Light-Mode oder Dark-Mode",
+  "STRING_SETTING_THEME_SUBTITLE": "Möchten Sie die App im Light-Mode (Hell) oder Dark-Mode (Dunkel) ändern?",
   "STRING_NO_DOWNLOAD_UPDATE": "Ihre App ist bereits aktuell.",
-  "STRING_DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
+  "STRING_DOWNLOAD_UPDATE": "UPDATE downloaden",
   "STRING_SETTING_APP_VERSION_TITLE": "Version",
   "STRING_SETTING_APP_VERSION_SUBTITLE": "Informationen über die aktuelle App-Version",
   "STRING_SETTING_APP_VERSION_INSTALLED": "installierte Version",
   "STRING_SETTING_APP_VERSION_LATEST": "letzte Version",
-  "STRING_MENU": "Menu",
-  "STRING_SEARCH_COLLECTION": "Search Collection",
-  "STRING_SWITCH_THEME": "Switch Theme",
+  "STRING_MENU": "Menü",
+  "STRING_SEARCH_COLLECTION": "Sammlung durchsuchen",
+  "STRING_SWITCH_THEME": "Theme ändern",
   "STRING_PLAY": "Play",
   "STRING_PAUSE": "Pause",
-  "STRING_DELETE": "Delete",
-  "STRING_SHARE": "Share",
-  "STRING_ADD_TO_PLAYLIST": "Add to playlist",
-  "STRING_SAVE_TO_DOWNLOADS": "Save to downloads",
-  "STRING_LOCAL_SEARCH_WELCOME": "Enter something to search in your collection",
-  "STRING_LOCAL_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
-  "STRING_PLAYLIST": "Playlist",
-  "STRING_PLAYLISTS": "Playlists",
-  "STRING_PLAYLISTS_SUBHEADER": "Playlists created by you",
-  "STRING_PLAYLISTS_CREATE": "Create a new playlist",
-  "STRING_PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
-  "STRING_PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
-  "STRING_LOCAL_ALBUM_VIEW_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
-  "STRING_LOCAL_ALBUM_VIEW_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to remove this playlist saved on your device?",
-  "STRING_CANCEL": "CANCEL",
-  "STRING_PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
-  "STRING_PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
-  "STRING_PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
-  "STRING_TRANSFERS": "Transfers",
-  "STRING_THEME_MODE_SYSTEM": "Follow system theme",
-  "STRING_SETTING_INDEXING_TITLE": "Collection",
-  "STRING_SETTING_INDEXING_SUBTITLE": "Select folders to search for music or reindex",
-  "STRING_SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
-  "STRING_SETTING_INDEXING_DONE": "Indexed",
-  "STRING_SETTING_INDEXING_WARNING": "Do not interrupt the process.",
-  "STRING_REFRESH": "REFRESH",
-  "STRING_SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
-  "STRING_NO_INTERNET_TITLE": "No Internet",
-  "STRING_NO_INTERNET_SUBTITLE": "Check your connection.",
-  "STRING_NO_COLLECTION_TITLE": "Empty Collection",
-  "STRING_NO_COLLECTION_SUBTITLE": "No music found.",
-  "STRING_DOWNLOAD_COMPLETED": "Download Completed.",
-  "STRING_DOWNLOAD_FAILED": "Download Failed.",
+  "STRING_DELETE": "Löschen",
+  "STRING_SHARE": "Teilen",
+  "STRING_ADD_TO_PLAYLIST": "Zur Wiedergabeliste hinzufügen",
+  "STRING_SAVE_TO_DOWNLOADS": "In Downloads speichern",
+  "STRING_LOCAL_SEARCH_WELCOME": "Geben Sie einen Suchbegriff für Ihre Sammlung ein",
+  "STRING_LOCAL_SEARCH_NO_RESULTS": "In Ihrer Sammlung wurde nichts dergleichen gefunden.",
+  "STRING_PLAYLIST": "Wiedergabeliste",
+  "STRING_PLAYLISTS": "Wiedergabelisten",
+  "STRING_PLAYLISTS_SUBHEADER": "von Ihnen erstellte Wiedergabelisten",
+  "STRING_PLAYLISTS_CREATE": "neue Wiedergabeliste erstellen",
+  "STRING_PLAYLISTS_TEXT_FIELD_LABEL": "Name der Wiedergabeliste",
+  "STRING_PLAYLISTS_TEXT_FIELD_HINT": "Name der neuen Wiedergabeliste",
+  "STRING_LOCAL_ALBUM_VIEW_PLAYLIST_DELETE_DIALOG_HEADER": "Sind Sie sicher?",
+  "STRING_LOCAL_ALBUM_VIEW_PLAYLIST_DELETE_DIALOG_BODY": "Möchten Sie diese auf Ihrem Gerät gespeicherte Wiedergabeliste entfernen?",
+  "STRING_CANCEL": "ABBRECHEN",
+  "STRING_PLAYLIST_ADD_DIALOG_TITLE": "zur Wiedergabeliste hinzufügen",
+  "STRING_PLAYLIST_ADD_DIALOG_BODY": "Wählen Sie eine Wiedergabeliste, um diesen Titel hinzuzufügen",
+  "STRING_PLAYLIST_TRACKS_SUBHEADER": "Hier sind die Titel in dieser Wiedergabeliste.",
+  "STRING_TRANSFERS": "Übertragungen",
+  "STRING_THEME_MODE_SYSTEM": "an das Systemtheme halten",
+  "STRING_SETTING_INDEXING_TITLE": "Sammlung",
+  "STRING_SETTING_INDEXING_SUBTITLE": "Ordner auswählen, um nach Musik zu suchen oder neu zu indizieren",
+  "STRING_SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexierung: NUMBER_STRING von TOTAL_STRING Titeln...",
+  "STRING_SETTING_INDEXING_DONE": "Indexiert",
+  "STRING_SETTING_INDEXING_WARNING": "Unterbrechen Sie diesen Vorgang nicht.",
+  "STRING_REFRESH": "NEULADEN",
+  "STRING_SEARCH_NO_RECENT_SEARCHES": "Ihre letzten Suchen werden hier angezeigt",
+  "STRING_NO_INTERNET_TITLE": "Kein Internet!",
+  "STRING_NO_INTERNET_SUBTITLE": "Prüfen Sie ihre Verbindung!",
+  "STRING_NO_COLLECTION_TITLE": "Leere Sammlung",
+  "STRING_NO_COLLECTION_SUBTITLE": "Keine Musik gefunden.",
+  "STRING_DOWNLOAD_COMPLETED": "Download abgeschlossen.",
+  "STRING_DOWNLOAD_FAILED": "Download fehlgeschlagen.",
   "STRING_DISCORD": "DISCORD SERVER",
-  "STRING_EXIT_TITLE": "Exit",
-  "STRING_EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
-  "STRING_A_TO_Z": "A to Z",
-  "STRING_DATE_ADDED": "Date Added",
-  "STRING_SETTING_ACCENT_COLOR_AUTOMATIC": "Automatic Accent",
-  "STRING_SETTING_MISCELLANEOUS_TITLE": "Miscellaneous",
-  "STRING_SETTING_MISCELLANEOUS_SUBTITLE": "Other settings in the app",
-  "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Enable iOS mechanics",
-  "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Set platform to TargetPlatform.iOS",
-  "STRING_SELECTED_DIRECTORY": "Selected directory:",
-  "STRING_LYRICS": "Lyrics",
-  "STRING_NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
-  "STRING_NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "STRING_LYRICS_RETRIEVING": "Retrieving lyrics...",
-  "STRING_LYRICS_NOT_FOUND": "Lyrics not found.",
-  "STRING_COMING_UP": "Coming Up",
+  "STRING_EXIT_TITLE": "Beenden",
+  "STRING_EXIT_SUBTITLE": "Möchten Sie Harmonoid beenden?",
+  "STRING_A_TO_Z": "A bis Z",
+  "STRING_DATE_ADDED": "Datum hinzugefügt",
+  "STRING_SETTING_ACCENT_COLOR_AUTOMATIC": "Automatischer Akzent",
+  "STRING_SETTING_MISCELLANEOUS_TITLE": "Sonstiges",
+  "STRING_SETTING_MISCELLANEOUS_SUBTITLE": "Andere App-Einstellungen",
+  "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "iOS-Mechanismen aktivieren",
+  "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Plattform auf TargetPlatform.iOS setzen",
+  "STRING_SELECTED_DIRECTORY": "Ausgewähltes Verzeichnis:",
+  "STRING_LYRICS": "Liedtexte (Lyrics)",
+  "STRING_NOTIFICATION_LYRICS_TITLE": "Benachrichtigungs-Lyrics",
+  "STRING_NOTIFICATION_LYRICS_SUBTITLE": "Liedtext in einer Benachrichtigung anzeigen.",
+  "STRING_LYRICS_RETRIEVING": "Abrufen von Liedtexten...",
+  "STRING_LYRICS_NOT_FOUND": "Liedtext nicht gefunden.",
+  "STRING_COMING_UP": "Demnächst verfügbar",
   "STRING_ALBUM_SINGLE": "Album",
-  "STRING_TRACK_SINGLE": "Track",
-  "STRING_ARTIST_SINGLE": "Artist",
-  "STRING_ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "STRING_TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "STRING_REMOVE": "REMOVE",
-  "STRING_ADD_NEW_FOLDER": "ADD NEW FOLDER",
-  "STRING_ADD_TO_NOW_PLAYING": "Add to now playing",
-  "STRING_PLAY_NOW": "Play now",
-  "STRING_COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "STRING_SELECTED_DIRECTORIES": "Selected directories:",
-  "STRING_ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
-  "STRING_SEARCH": "Search",
-  "STRING_COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
-  "STRING_RECOMMENDATIONS": "Recommendations",
-  "STRING_YOUTUBE_WELCOME": "Search for music or give a link",
-  "STRING_YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "STRING_YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
-  "STRING_RETRIEVING_INFO": "Retrieving info",
-  "STRING_RETRIEVING_LINK": "Retrieving stream",
-  "STRING_STARTING_PLAYBACK": "Starting playback",
-  "STRING_BUFFERING": "Buffering...",
-  "STRING_WARNING": "Warning",
-  "STRING_LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "STRING_ENABLE_125_SCALING": "Enable 125% scaling.",
-  "STRING_REPORT": "REPORT"
+  "STRING_TRACK_SINGLE": "Titel",
+  "STRING_ARTIST_SINGLE": "Künstler",
+  "STRING_ALBUMS_FROM_ARTIST": "Alben von diesen Künstler.",
+  "STRING_TRACKS_FROM_ARTIST": "Titel von diesen Künstler.",
+  "STRING_REMOVE": "ENTFERNEN",
+  "STRING_ADD_NEW_FOLDER": "NEUEN ORDNER HINZUFÜGEN",
+  "STRING_ADD_TO_NOW_PLAYING": "Zu 'Jetzt spielen' hinzufügen",
+  "STRING_PLAY_NOW": "Jetzt abspielen",
+  "STRING_COLLECTION_SEARCH_LABEL": "In Ihrer Sammlung nachschlagen",
+  "STRING_SELECTED_DIRECTORIES": "Ausgewählte Verzeichnisse:",
+  "STRING_ENABLE_ACRYLIC_BLUR": "Windows-Acryl-Weichzeichner aktivieren.",
+  "STRING_SEARCH": "Suche",
+  "STRING_COLLECTION_INDEXING_LABEL": "Ihre lokale Musik wird synchronisiert.\n Es ist nicht ratsam, die App zu schließen.",
+  "STRING_RECOMMENDATIONS": "Empfehlungen",
+  "STRING_YOUTUBE_WELCOME": "Nach Musik suchen oder einen Link eingeben",
+  "STRING_YOUTUBE_NO_RESULTS": "Nichts Derartiges wurde gefunden.",
+  "STRING_YOUTUBE_INTERNET_ERROR": "Spielen wir deine lokale Musik, bis du wieder online gehst.",
+  "STRING_RETRIEVING_INFO": "Informationen abrufen",
+  "STRING_RETRIEVING_LINK": "Stream abrufen",
+  "STRING_STARTING_PLAYBACK": "Wiedergabe starten",
+  "STRING_BUFFERING": "Puffern...",
+  "STRING_WARNING": "Warnung",
+  "STRING_LAST_COLLECTION_DIRECTORY_REMOVED": "Mindestens ein Ordner muss in Ihrer Sammlung bleiben!",
+  "STRING_ENABLE_125_SCALING": "125%-Skalierung aktivieren.",
+  "STRING_REPORT": "MELDEN"
 }
