--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -42,7 +42,7 @@
   "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_TITLE": "Трек не может быть сохранён",
   "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_SUBTITLE": "Пожалуйста, проверьте интернет-соединение и попробуйте снова.",
   "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_TITLE": "У всех бывают плохие дни",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_SUBTITLE": "We have encountered an error while saving this track. This generally means that you need to check & update your server. This error has nothing to do with this application.",
+  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_SUBTITLE": "Произошла ошибка при сохранении трека. Обычно это означает, что Вам нужно проверить и обновить свой сервер. Ошибка не относится к приложению.",
   "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_TITLE": "Подождите",
   "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_SUBTITLE": "Этот трек уже скачивается.",
   "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_TITLE": "Трек уже скачан",
@@ -76,7 +76,7 @@
   "STRING_SETTING_LANGUAGE_SUBTITLE": "Изменить язык приложения",
   "STRING_SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Необходимо перезапустить приложение",
   "STRING_SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Перезапустить сейчас?",
-  "STRING_ABOUT_TITLE": "О приложении",
+  "STRING_ABOUT_TITLE": "Подробнее",
   "STRING_ABOUT_SUBTITLE": "Информация о проекте и его разработчиках.",
   "STRING_SETTING_SERVER_CHANGE_TITLE": "Сервер",
   "STRING_SETTING_SERVER_CHANGE_SUBTITLE": "Изменить источник данных",
@@ -146,37 +146,37 @@
   "STRING_SETTING_MISCELLANEOUS_SUBTITLE": "Другие настройки",
   "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Включить механики iOS",
   "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Задать платформу TargetPlatform.iOS",
-  "STRING_SELECTED_DIRECTORY": "Selected directory:",
-  "STRING_LYRICS": "Lyrics",
-  "STRING_NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
-  "STRING_NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "STRING_LYRICS_RETRIEVING": "Retrieving lyrics...",
-  "STRING_LYRICS_NOT_FOUND": "Lyrics not found.",
-  "STRING_COMING_UP": "Coming Up",
-  "STRING_ALBUM_SINGLE": "Album",
-  "STRING_TRACK_SINGLE": "Track",
-  "STRING_ARTIST_SINGLE": "Artist",
-  "STRING_ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "STRING_TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "STRING_REMOVE": "REMOVE",
-  "STRING_ADD_NEW_FOLDER": "ADD NEW FOLDER",
-  "STRING_ADD_TO_NOW_PLAYING": "Add to now playing",
-  "STRING_PLAY_NOW": "Play now",
-  "STRING_COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "STRING_SELECTED_DIRECTORIES": "Selected directories:",
-  "STRING_ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
-  "STRING_SEARCH": "Search",
-  "STRING_COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
-  "STRING_RECOMMENDATIONS": "Recommendations",
-  "STRING_YOUTUBE_WELCOME": "Search for music or give a link",
-  "STRING_YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "STRING_YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
-  "STRING_RETRIEVING_INFO": "Retrieving info",
-  "STRING_RETRIEVING_LINK": "Retrieving stream",
-  "STRING_STARTING_PLAYBACK": "Starting playback",
-  "STRING_BUFFERING": "Buffering...",
-  "STRING_WARNING": "Warning",
-  "STRING_LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "STRING_ENABLE_125_SCALING": "Enable 125% scaling.",
-  "STRING_REPORT": "REPORT"
+  "STRING_SELECTED_DIRECTORY": "Выбранная папка:",
+  "STRING_LYRICS": "Текст",
+  "STRING_NOTIFICATION_LYRICS_TITLE": "Уведомление с текстом песен",
+  "STRING_NOTIFICATION_LYRICS_SUBTITLE": "Показывать тексты песен в уведомлении.",
+  "STRING_LYRICS_RETRIEVING": "Получение текста песни...",
+  "STRING_LYRICS_NOT_FOUND": "Текст не найден.",
+  "STRING_COMING_UP": "Далее",
+  "STRING_ALBUM_SINGLE": "Альбом",
+  "STRING_TRACK_SINGLE": "Трек",
+  "STRING_ARTIST_SINGLE": "Исполнитель",
+  "STRING_ALBUMS_FROM_ARTIST": "Альбомы этого исполнителя.",
+  "STRING_TRACKS_FROM_ARTIST": "Треки этого исполнителя.",
+  "STRING_REMOVE": "УДАЛИТЬ",
+  "STRING_ADD_NEW_FOLDER": "ДОБАВИТЬ ПАПКУ",
+  "STRING_ADD_TO_NOW_PLAYING": "Добавить в очередь",
+  "STRING_PLAY_NOW": "Воспроизвести",
+  "STRING_COLLECTION_SEARCH_LABEL": "Ищите в своей коллекции",
+  "STRING_SELECTED_DIRECTORIES": "Выбранные папки:",
+  "STRING_ENABLE_ACRYLIC_BLUR": "Включить размытие фона.",
+  "STRING_SEARCH": "Поиск",
+  "STRING_COLLECTION_INDEXING_LABEL": "Ваша музыка синхронизируется.\nНе закрывайте приложение.",
+  "STRING_RECOMMENDATIONS": "Рекомендации",
+  "STRING_YOUTUBE_WELCOME": "Ищите музыку или вставьте ссылку",
+  "STRING_YOUTUBE_NO_RESULTS": "Ничего не найдено.",
+  "STRING_YOUTUBE_INTERNET_ERROR": "Пока нет интернета, включите что-нибудь из своей коллекции.",
+  "STRING_RETRIEVING_INFO": "Получение информации",
+  "STRING_RETRIEVING_LINK": "Получение ссылки",
+  "STRING_STARTING_PLAYBACK": "Запуск воспроизведения",
+  "STRING_BUFFERING": "Буферизация...",
+  "STRING_WARNING": "Внимание",
+  "STRING_LAST_COLLECTION_DIRECTORY_REMOVED": "Хотя бы одна папка должна быть выбрана.",
+  "STRING_ENABLE_125_SCALING": "Включить 125% масштаб.",
+  "STRING_REPORT": "СООБЩИТЬ"
 }
