--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -130,5 +130,6 @@
   "BUFFERING": "बफर हो रहा है...",
   "WARNING": "चेतावनी",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
-  "ENABLE_125_SCALING": "Enable 125% scaling."
+  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "YEAR": "Year"
 }
