--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -130,5 +130,6 @@
   "BUFFERING": "Tampon...",
   "WARNING": "Tandremo",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
-  "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%."
+  "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
+  "YEAR": "Year"
 }
