--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -131,5 +131,6 @@
   "WARNING": "警告",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
-  "REPORT": "报告"
+  "REPORT": "报告",
+  "YEAR": "Year"
 }
