🌐 Change COLLECTION_SEARCH_WELCOME

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -62,7 +62,7 @@
   "SHARE": "Share",
   "ADD_TO_PLAYLIST": "Add to playlist",
   "SAVE_TO_DOWNLOADS": "Save to downloads",
-  "COLLECTION_SEARCH_WELCOME": "Enter something to search in your collection",
+  "COLLECTION_SEARCH_WELCOME": "Search albums, tracks, or artists...",
   "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
   "PLAYLISTS": "Playlists",
   "PLAYLIST": "Playlist",
