--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -131,5 +131,6 @@
   "WARNING": "Tandremo",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
-  "YEAR": "Year"
+  "YEAR": "Year",
+  "KNOW_MORE": "KNOW MORE"
 }
