--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -131,5 +131,6 @@
   "WARNING": "Waarschuwing",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Er moet ten minste één map in uw collectie blijven.",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
-  "YEAR": "Year"
+  "YEAR": "Year",
+  "KNOW_MORE": "KNOW MORE"
 }
