--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -131,5 +131,6 @@
   "WARNING": "Warning",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
-  "YEAR": "Year"
+  "YEAR": "Year",
+  "KNOW_MORE": "KNOW MORE"
 }
