--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -131,5 +131,6 @@
   "WARNING": "Opozorilo",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
-  "YEAR": "Year"
+  "YEAR": "Year",
+  "KNOW_MORE": "KNOW MORE"
 }
