🌐 Update en-US translation

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -22,7 +22,7 @@
   "COLLECTION_OTHER_SUBHEADER_TRACK": "More tracks",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Latest artist",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "More artists",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tracks from the album",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tracks",
   "COLLECTION_ALBUM_INFO_SUBHEADER": "Some insights of the album",
   "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Are you sure?",
   "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Do you want to remove this album saved on your device?",
@@ -109,8 +109,8 @@
   "TRACK_SINGLE": "Track",
   "ARTIST_SINGLE": "Artist",
   "SEARCH": "Search",
-  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "ALBUMS_FROM_ARTIST": "Albums",
+  "TRACKS_FROM_ARTIST": "Tracks",
   "REMOVE": "REMOVE",
   "ADD_NEW_FOLDER": "ADD NEW FOLDER",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
